[package]
  name = "chirpstack-packet-multiplexer"
  description = "ChirpStack Packet Multiplexer"
  repository = "https://github.com/chirpstack/chirpstack-package-multiplexer/"
  homepage = "https://github.com/chirpstack/chirpstack-package-multiplexer/"
  license = "MIT"
  version = "4.0.0-test.3"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2024"
  publish = false

[dependencies]
  clap = { version = "4.5", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
  ] }
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  base64 = "0.22"
  toml = { version = "0.9", default-features = false, features = [
    "std",
    "parse",
    "serde",
  ] }
  prometheus-client = "0.24"
  tokio = { version = "1.48", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
  ] }
  anyhow = "1.0"
  lrwn_filters = { version = "4.15.0", features = ["serde"] }
  tracing = "0.1"
  tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
  signal-hook = "0.3"
  hex = "0.4"
  axum = "0.8"
  handlebars = "6.3"

  # Debian packaging.
  [package.metadata.deb]
    assets = [
      [
        "target/release/chirpstack-packet-multiplexer",
        "usr/bin/",
        "755",
      ],
      [
        "packaging/debian/chirpstack-packet-multiplexer.toml",
        "etc/chirpstack-packet-multiplexer/",
        "640",
      ],
    ]
    conf-files = [
      "/etc/chirpstack-packet-multiplexer/chirpstack-packet-multiplexer.toml",
    ]
    maintainer-scripts = "packaging/debian/"
    systemd-units = { enable = true }
